2024-10-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el: Use `when-let*', `if-let*' and `and-let*'
	consequently.  (Bug#73441)

2024-08-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-deftest-direct-async-process):
	Skip when underlying TEST has taken too much time.
	(tramp--test-with-proper-process-name-and-buffer): Remove.
	(tramp-test45-asynchronous-requests): Remove callees.

2024-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive-tests.el (ert-resource-directory-format)
	(ert-resource-directory-trim-left-regexp)
	(ert-resource-directory-trim-right-regexp, ert-resource-directory)
	(ert-resource-file): Don't define.
	(tramp-archive--test-emacs28-p): Remove.
	(top): Remove unneeded skips.  Use original objects instead of
	their `tramp-compat-' counterparts when possible.

	* tramp-tests.el (seq): Don't require.
	(lock-file-name-transforms, process-file-return-signal-string)
	(remote-file-name-inhibit-locks, dired-copy-dereference): Don't declare.
	(ert-resource-directory-format)
	(ert-resource-directory-trim-left-regexp)
	(ert-resource-directory-trim-right-regexp, ert-resource-directory)
	(ert-resource-file): Don't define.
	(tramp--test-emacs28-p): Remove.
	(top): Remove unneeded skips.  Use original objects instead of
	their `tramp-compat-' counterparts when possible.

2024-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test02-file-name-dissect)
	(tramp-test02-file-name-dissect-simplified)
	(tramp-test02-file-name-dissect-separate): Extend tests.
	(tramp-test06-directory-file-name)
	(tramp-test26-file-name-completion)
	(tramp-test26-interactive-file-name-completion): Better handling
	of IPv6 hosts.

2024-07-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test41-special-characters-direct-async)
	(tramp-test42-utf8-direct-async): New tests.

2024-07-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test01-file-name-syntax)